Changes made by Dan. Modified for testing moving repos from Github to Bitbucket.

--- a/Dan demo/views/viewFirst.html
+++ b/Dan demo/views/viewFirst.html
@@ -1,5 +1,4 @@
 <div data-role="view" id="viewFirst" data-layout="layoutMain" data-title="First View Title">
-    <p>
-		Welcome to the demo app.
-	</p>
+    <p>Welcome to the demo app.</p>
+	<p>Demo App edited for testing moving repos from Github to Bitbucket</p>
 </div>
