Changes made by Dan. Revision for the demoBranch2.

--- a/Dan demo/views/viewFirst.html
+++ b/Dan demo/views/viewFirst.html
@@ -1,4 +1,5 @@
 <div data-role="view" id="viewFirst" data-layout="layoutMain" data-title="First View Title">
     <p>Welcome to the demo app.</p>
 	<p>Demo App edited for testing moving repos from Github to Bitbucket</p>
+	<p>Revision for the demoBranch2</p>
 </div>
