Changes made by Dan. Commit after the demoBranch2 merge to master.

--- a/Dan demo/views/viewFirst.html
+++ b/Dan demo/views/viewFirst.html
@@ -2,4 +2,5 @@
     <p>Welcome to the demo app.</p>
 	<p>Demo App edited for testing moving repos from Github to Bitbucket</p>
 	<p>Revision for the demoBranch2</p>
+	<p>Revision after the demoBranch2 merge to master</p>
 </div>
